# pytest-sample-argvalues

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/pytest_sample_argvalues/: __init__.py  main.py
tests/: test_pytest_argvalues_sample.py
